--- a/src/components/UI/Modal.module.css
+++ b/src/components/UI/Modal.module.css
@@ -1,7 +1,7 @@
 .Modal {
   position: fixed;
   z-index: 500;
-  background-color: white;
+  background-color: whitesmoke;
   width: 70%;
   border: 1px solid #ccc;
   box-shadow: 1px 1px 1px black;
@@ -9,7 +9,7 @@
   left: 15%;
   top: 30%;
   box-sizing: border-box;
-  transition: all 0.3s ease-out;
+  transition: all 0.7s ease-out;
 }
 
 @media (min-width: 600px) {
